@@ -7,6 +7,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ## [Unreleased]
 
+ * support to easily archive reports
  * extend available info with cpuinfo
  * support using local tools (mainly for testing)
  * initial variant of the SpecSAT.py tool
